src/test/deca/context/valid/class/cast/downcast.deca
// Description:
//    Cast to an child class
//
// Resultats:
//    Cast ok

class A {}

class B extends A {}

{
	A a;
	B b = (B) (a);
}
