src/test/deca/context/invalid/class/cast/cast_primitive_nonprimitive.deca
// Description:
//    Cast type primitif/ type non primitif non permis
//
// Resultats:
//    Incompatible cast from int to A

class A{

}

{
    A a = new A();
    int b = (A) (5);
}
